2007-03-20  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/cellfun.cc (Fcellfun): Correct for shape of return
	matrix for the case of UniformOutput being true.

2007-03-20  John W. Eaton  <jwe@octave.org>

	* sysdep.cc (Fpause): Call drawnow.

2007-03-15  John W. Eaton  <jwe@octave.org>

	* variables.cc (F__lock_global__): Delete.

2007-03-14  John W. Eaton  <jwe@octave.org>

	* graphics.cc: New file.
	* Makefile.in (DIST_SRC): Add it to the list.

2007-03-13  John W. Eaton  <jwe@octave.org>

	* file-io.cc (do_stream_open): Use binary mode if 't' is not
	  specified in mode, but don't add 'b' if it is already present.

2007-03-09  David Bateman  <dbateman@free.fr>

	* data.cc (do_cat):  Also treat case of all empty matrices.

2007-03-08  John W. Eaton  <jwe@octave.org>

	* mex.cc (mxArray_octave_value::set_dimensions,
	mxArray_octave_value::set_m, mxArray_octave_value::set_n, 
	mxArray_octave_value::set_class_name,
	mxArray_octave_value::set_ir, mxArray_octave_value::set_jc,
	mxArray_octave_value::remove_field,
	mxArray_octave_value::set_field_by_number):
	Don't panic; request mutation instead.
	(class mxArray_octave_value): 

	* mxarray.h (mxArray::set_m, mxArray::set_n,
	mxArray::set_dimensions): Wrap method call call with
	DO_VOID_MUTABLE_METHOD.

2007-03-08  David Bateman  <dbateman@free.fr>

	* data.cc (do_cat): Ignore leading empty matrices.

2007-03-07  Bob Weigel  <rweigel@gmu.edu>

	* urlwrite.cc (urlget): Allow URL redirects.

2007-03-05  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/md5sum.cc (Fmd5sum): Treat both files and strings.

2007-03-05  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__glpk__.cc (F__glpk__): Check GLPK_PRE_4_14, not
	GLPK_PRE_4_15.

2007-03-02  John W. Eaton  <jwe@octave.org>

	* parse.y (Fautoload): Undo previous change.
	Warn if FILE is not an absolute file name.

	* utils.cc (make_absolute): Make copy of arg before 

2007-03-01  John W. Eaton  <jwe@octave.org>
