@@ -1,3 +1,8 @@
+2007-03-21  John W. Eaton  <jwe@octave.org>
+
+	* sysdep.cc (Fpause): Also call drawnow if nargin == 0.
+	(Fkbhit, Fsleep, Fusleep): Also call drawnow here.
+
 2007-03-20  David Bateman  <dbateman@free.fr>
 
 	* DLD-FUNCTIONS/cellfun.cc (Fcellfun): Correct for shape of return
